--- a/src/main/resources/templates/fragment.html
+++ b/src/main/resources/templates/fragment.html
@@ -55,7 +55,7 @@
                                     <a class="dropdown-item samuraitravel-dropdown-item" th:href="@{/user}">会員情報</a>
                                     <a class="dropdown-item samuraitravel-dropdown-item" th:href="@{/reservations}">予約一覧</a>  
                                     <a class="dropdown-item samuraitravel-dropdown-item" th:href="@{/favorites}">お気に入り一覧</a>
-                                    <a class="dropdown-item samuraitravel-dropdown-item" th:href="@{/reviews}">レビュー一覧</a>
+<!--                                    <a class="dropdown-item samuraitravel-dropdown-item" th:href="@{/reviews}">レビュー一覧</a>-->
 
                                     <div class="dropdown-divider"></div>
 
