--- a/src/main/resources/templates/houses/show.html
+++ b/src/main/resources/templates/houses/show.html
@@ -140,7 +140,7 @@
                                                         <h5 class="card-title" th:text="${review.getUser().getName()}"></h5>
                                                         <span sec:authorize="isAuthenticated()" th:if="${#authentication.principal.user.id == review.getUser().getId()}">
                                                             <a class="me-2" th:href="@{/houses/{houseId}/reviews/{reviewId}/edit(houseId=${house.id}, reviewId=${review.getId()})}">編集</a>
-                                                            <a href="#" class="samuraitravel-link-danger" data-bs-toggle="modal" th:data-bs-target="#deleteReviewModal${review.getId()}">削除</a>
+                                                            <a href="#" class="samuraitravel-link-danger" data-bs-toggle="modal" th:data-bs-target="${'#deleteReviewModal-' + review.getId()}">削除</a>
                                                         </span>
                                                     </div>
                                                     <p class="card-text mb-1">
