--- a/src/main/resources/templates/houses/show.html
+++ b/src/main/resources/templates/houses/show.html
@@ -27,16 +27,16 @@
                                 </nav> 
                                 
                                 <!-- お気に入り機能 ここから -->
-                                <div sec:authorize="isAuthenticated()">
-                                    <div th:if="${favoriteFlag}">
-                                        <a href="#" onclick="event.preventDefault(); document.getElementById('favorite-form').submit();">&#9829; お気に入り解除</a>
-                                        <form method="post" th:action="@{/houses/{houseId}/favorites/{favoriteId}/delete(houseId=${house.id}, favoriteId=${favorite.id})}"></form>
-                                    </div>
-                                    <div th:unless="${favoriteFlag}">
-                                        <a href="#" onclick="event.preventDefault(); document.getElementById('favorite-form').submit();">&#9825; お気に入り追加</a>
-                                        <form method="post" th:action="@{/houses/{houseId}/favorites/create(houseId=${house.id})}"></form>
-                                    </div>
-                                </div>
+								<div sec:authorize="isAuthenticated()">
+								     <div th:if="${favoriteFlag}">
+								         <a href="#" onclick="event.preventDefault(); document.getElementById('favorite-form').submit();">&#9829; お気に入り解除</a>
+								         <form method="post" th:action="@{/houses/__${house.getId()}__/favorites/__${favorite.getId()}__/delete}" id="favorite-form" class="d-none"></form>
+								     </div>
+								     <div th:unless="${favoriteFlag}">
+								         <a href="#" onclick="event.preventDefault(); document.getElementById('favorite-form').submit();">&#9825; お気に入り追加</a>
+								         <form method="post" th:action="@{/houses/__${house.getId()}__/favorites/create}" id="favorite-form" class="d-none"></form>
+								     </div>
+								 </div>
                             </div>
                             <!-- お気に入り機能 ここまで -->
                             
@@ -141,6 +141,31 @@
                                                         <span sec:authorize="isAuthenticated()" th:if="${#authentication.principal.user.id == review.getUser().getId()}">
                                                             <a class="me-2" th:href="@{/houses/{houseId}/reviews/{reviewId}/edit(houseId=${house.id}, reviewId=${review.getId()})}">編集</a>
                                                             <a href="#" class="samuraitravel-link-danger" data-bs-toggle="modal" th:data-bs-target="${'#deleteReviewModal-' + review.getId()}">削除</a>
+															<!-- 削除用モーダル -->
+															<div class="modal fade" th:id="'deleteReviewModal-' + ${review.getId()}" tabindex="-1" aria-labelledby="deleteReviewLabel" aria-hidden="true">
+															    <div class="modal-dialog">
+															        <div class="modal-content">
+															            <div class="modal-header">
+															                <h5 class="modal-title" id="deleteReviewLabel">レビュー削除</h5>
+															                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+															            </div>
+															            <div class="modal-body">
+															                このレビューを削除しますか？
+															            </div>
+															            <div class="modal-footer">
+															                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">キャンセル</button>
+															                <form th:action="@{/houses/{houseId}/reviews/{reviewId}/delete(houseId=${house.getId()}, reviewId=${review.getId()})}" method="post">
+															                    <button type="submit" class="btn btn-danger">削除する</button>
+															                </form>
+															            </div>
+															        </div>
+															    </div>
+															</div>
+															
+															
+															
+															
+															
                                                         </span>
                                                     </div>
                                                     <p class="card-text mb-1">
