--- a/src/main/resources/templates/reviews/index.html
+++ b/src/main/resources/templates/reviews/index.html
@@ -85,24 +85,24 @@
                             </div>    
                              
                             <!-- ページネーション -->
-                            <nav th:if="${reviewPage.totalPages > 1}">
-                                <ul class="pagination justify-content-center">
-                                    <li class="page-item" th:classappend="${reviewPage.first ? 'disabled' : ''}">
-                                        <a class="page-link" th:href="@{${reviewPage.previousPageable}}" aria-label="前へ">
-                                            <span aria-hidden="true">&laquo;</span>
-                                        </a>
-                                    </li>
-                                    <li class="page-item" th:each="pageNum : ${#numbers.sequence(1, reviewPage.totalPages)}"
-                                        th:classappend="${pageNum == reviewPage.number + 1 ? 'active' : ''}">
-                                        <a class="page-link" th:href="@{${reviewPage.pageable.withPage(pageNum - 1)}}" th:text="${pageNum}"></a>
-                                    </li>
-                                    <li class="page-item" th:classappend="${reviewPage.last ? 'disabled' : ''}">
-                                        <a class="page-link" th:href="@{${reviewPage.nextPageable}}" aria-label="次へ">
-                                            <span aria-hidden="true">&raquo;</span>
-                                        </a>
-                                    </li>
-                                </ul>
-                            </nav>
+                            <div th:if="${reviewPage.getTotalPages() > 1}" class="d-flex justify-content-center">
+                                <nav aria-label="レビュー一覧ページ">
+                                    <ul class="pagination">
+                                        <li class="page-item">
+                                            <span th:if="${reviewPage.isFirst()}" class="page-link disabled">前</span>
+                                            <a th:unless="${reviewPage.isFirst()}" th:href="@{/houses/__${house.getId()}__/reviews(page = ${reviewPage.getNumber() - 1})}" class="page-link samuraitravel-page-link">前</a>
+                                        </li>
+                                        <li th:each="i : ${#numbers.sequence(0, reviewPage.getTotalPages() - 1)}" class="page-item">
+                                            <span th:if="${i == reviewPage.getNumber()}" class="page-link active samuraitravel-active" th:text="${i + 1}"></span>
+                                            <a th:unless="${i == reviewPage.getNumber()}" th:href="@{/houses/__${house.getId()}__/reviews(page = ${i})}" class="page-link samuraitravel-page-link" th:text="${i + 1}"></a>
+                                        </li>
+                                        <li class="page-item">                        
+                                            <span th:if="${reviewPage.isLast()}" class="page-link disabled">次</span>
+                                            <a th:unless="${reviewPage.isLast()}" th:href="@{/houses/__${house.getId()}__/reviews(page = ${reviewPage.getNumber() + 1})}" class="page-link samuraitravel-page-link">次</a>
+                                        </li>
+                                    </ul>
+                                </nav> 
+                            </div>
                         </div>
                     </div>
                 </div>                            
